--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
       
       # File storage
       UPLOAD_DIR: /app/uploads
-      MODEL_PATH: /app/best.pt
+      #MODEL_PATH: /app/best.pt
       
       # Server configuration
       HOST: 0.0.0.0
@@ -99,13 +99,13 @@ services:
       DB_POOL_MAX: ${DB_POOL_MAX:-20}
       
       # CORS origins
-      ALLOWED_ORIGINS: http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
+      ALLOWED_ORIGINS: http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://localhost:8000
       
       # File upload limits
       MAX_UPLOAD_SIZE_MB: ${MAX_UPLOAD_SIZE_MB:-100}
     volumes:
       - uploads_data:/app/uploads
-      - ./best.pt:/app/best.pt:ro
+      #- ./best.pt:/app/best.pt:ro
     depends_on:
       db:
         condition: service_healthy
